--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>{{ 'APP_NAME' | translate }}</title>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+    <!--Reference https://goo.gl/9ZXF8T-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-translate/2.15.2/angular-translate.min.js"></script>
-    <script src="app.min.js"></script>
+    <script src="app.js"></script>
 </head>
 <body ng-controller="ConfirmController">
 <div class="ui text container">
