Adding app.min.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
     <!--Reference https://goo.gl/9ZXF8T-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-translate/2.15.2/angular-translate.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.min.js"></script>
 </head>
 <body ng-controller="ConfirmController">
 <div class="ui text container">
